croc-hunter-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: croc-hunter-nodeport-service
  labels:
    component: croc-hunter
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    component: croc-hunter
  type: NodePort
