croc-hunter.yaml
apiVersion: v1
kind: Service
metadata:
  name: croc-hunter
  labels:
    component: croc-hunter
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    component: croc-hunter
  type: "ClusterIP"

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: croc-hunter
  labels:
    component: croc-hunter
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      component: "croc-hunter"
  template:
    metadata:
      labels:
        component: "croc-hunter"
    spec:
      containers:
        - name: croc-hunter
          image: "voronenko/docker-sample-image:47372c4"
          imagePullPolicy: "Always"
          ports:
          - name: http
            containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
