croc-hunter-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
     kubernetes.io/ingress.class: nginx
  name: croc-hunter
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: croc-hunter
          servicePort: 8080
